--- a/_desafios/d012/estilo/style.css
+++ b/_desafios/d012/estilo/style.css
@@ -1,13 +1,24 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+:root{    
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 
 *{ /*configurações globais para resetar o conteúdo*/
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 
 html, body{
+    font-family: var(--fonte1);
     min-height: 100vh;
     background-color: darkgray;
 }
@@ -19,6 +30,8 @@ header{
 }
 
 header >h1{
+    font-family: var(--fonte2);
+    font-size: 10vw;/*10% da largura da tela e vai ajustando automaticamente a fonte*/
     padding-top: 50px;
     /*text-transform: uppercase;*/
     font-variant: small-caps;
@@ -41,8 +54,10 @@ a:hover{
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 2em;
+    line-height: 5vh;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -56,7 +71,8 @@ section.imagem{
 }
 
 section.imagem > p{
-    width: 400px;
+    display: inline-block; /*Adapta a caixa ao conteúdo*/
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.322);
 }
 
